// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Breadcrumbs/List WithAttributes play-test 1`] = `
<div data-test-block="true">
  <ol id="htmlId"
      lang="nb"
      data-testid="123ID"
      class="_breadcrumbsList_p1lxe_1   dummyClassname"
  >
    <li class="_breadcrumbsItem_1jlx4_1">
      <a class="_link_1y34f_1  "
         href="#"
      >
        Bedrift og organisasjon
      </a>
      <span class="_breadcrumbsItemSeparator_1jlx4_10"
            aria-hidden="true"
      >
        /
      </span>
    </li>
    <li class="_breadcrumbsItem_1jlx4_1">
      <a class="_link_1y34f_1  "
         href="#"
      >
        Avgifter
      </a>
      <span class="_breadcrumbsItemSeparator_1jlx4_10"
            aria-hidden="true"
      >
        /
      </span>
    </li>
    <li class="_breadcrumbsItem_1jlx4_1">
      <a class="_link_1y34f_1  "
         href="#"
      >
        Avgifter på bil og kjøretøy
      </a>
      <span class="_breadcrumbsItemSeparator_1jlx4_10"
            aria-hidden="true"
      >
        /
      </span>
    </li>
    <li class="_breadcrumbsItem_1jlx4_1">
      <a class="_link_1y34f_1  "
         href="#"
      >
        Vektårsavgift
      </a>
      <span class="_breadcrumbsItemSeparator_1jlx4_10"
            aria-hidden="true"
      >
        /
      </span>
    </li>
  </ol>
</div>
`;

exports[`Tester/Breadcrumbs/List WithRef play-test 1`] = `
<div data-test-block="true">
  <ol class="_breadcrumbsList_p1lxe_1"
      id="dummyIdForwardedFromRef"
  >
    <li class="_breadcrumbsItem_1jlx4_1">
      <a class="_link_1y34f_1  "
         href="#"
      >
        Bedrift og organisasjon
      </a>
      <span class="_breadcrumbsItemSeparator_1jlx4_10"
            aria-hidden="true"
      >
        /
      </span>
    </li>
    <li class="_breadcrumbsItem_1jlx4_1">
      <a class="_link_1y34f_1  "
         href="#"
      >
        Avgifter
      </a>
      <span class="_breadcrumbsItemSeparator_1jlx4_10"
            aria-hidden="true"
      >
        /
      </span>
    </li>
    <li class="_breadcrumbsItem_1jlx4_1">
      <a class="_link_1y34f_1  "
         href="#"
      >
        Avgifter på bil og kjøretøy
      </a>
      <span class="_breadcrumbsItemSeparator_1jlx4_10"
            aria-hidden="true"
      >
        /
      </span>
    </li>
    <li class="_breadcrumbsItem_1jlx4_1">
      <a class="_link_1y34f_1  "
         href="#"
      >
        Vektårsavgift
      </a>
      <span class="_breadcrumbsItemSeparator_1jlx4_10"
            aria-hidden="true"
      >
        /
      </span>
    </li>
  </ol>
</div>
`;
